--- a/app/app/index.html
+++ b/app/app/index.html
@@ -8,7 +8,6 @@
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
     <!-- build:css(.) styles/vendor.css -->
     <!-- bower:css -->
-    <link rel='stylesheet' href='bower_components/bootstrap/dist/css/bootstrap.css' />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css(.tmp) styles/main.css -->
@@ -32,19 +31,15 @@
     <div class="navbar">
 		<div class="navbar-inner">
 			<div class="container-fluid">
-				<a class="btn btn-navbar" data-toggle="collapse" data-target=".top-nav.nav-collapse,.sidebar-nav.nav-collapse">
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-					<span class="icon-bar"></span>
-				</a>
-				<a class="brand" href="index.html"><span>Reserva</span></a>
+				
+				<a class="brand" href="#/"><span>Reserva</span></a>
 								
 				<!-- start: Header Menu -->
 				<div class="nav-no-collapse header-nav">
 					<ul class="nav pull-right">
 						<!-- start: User Dropdown -->
 						<li class="dropdown">
-							<a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+							<a class="btn dropdown-toggle" data-toggle="dropdown" href="#/">
 								<i class="halflings-icon white user"></i> Dennis Ji
 								<span class="caret"></span>
 							</a>
@@ -52,8 +47,8 @@
 								<li class="dropdown-menu-title">
  									<span>Opciones</span>
 								</li>
-								<li><a href="login.html"><i class="halflings-icon off"></i> Configuracion</a></li>
-								<li><a href="login.html"><i class="halflings-icon off"></i> Cerrar sesion</a></li>
+								<li><a href="#/login"><i class="halflings-icon off"></i> Configuracion</a></li>
+								<li><a href="#/login"><i class="halflings-icon off"></i> Cerrar sesion</a></li>
 							</ul>
 						</li>
 						<!-- end: User Dropdown -->
@@ -70,10 +65,10 @@
 			<div id="sidebar-left" class="span2">
 				<div class="nav-collapse sidebar-nav">
 					<ul class="nav nav-tabs nav-stacked main-menu">
-						<li><a href="index.html"><i class="icon-home"></i><span class="hidden-tablet"> Inicio</span></a></li>	
-						<li><a href="messages.html"><i class="icon-sitemap"></i><span class="hidden-tablet"> Salas</span></a></li>
-						<li><a href="tasks.html"><i class="icon-calendar"></i><span class="hidden-tablet"> Reservas</span></a></li>
-						<li><a href="ui.html"><i class="icon-eye-open"></i><span class="hidden-tablet"> Contacto</span></a></li>
+						<li><a href="#/"><i class="icon-home"></i><span class="hidden-tablet"> Inicio</span></a></li>	
+						<li><a href="#/"><i class="icon-sitemap"></i><span class="hidden-tablet"> Salas</span></a></li>
+						<li><a href="#/"><i class="icon-calendar"></i><span class="hidden-tablet"> Reservas</span></a></li>
+						<li><a href="#/"><i class="icon-eye-open"></i><span class="hidden-tablet"> Contacto</span></a></li>
 					</ul>
 				</div>
 			</div>
