Agregados elementos al sidebar

--- a/app/app/index.html
+++ b/app/app/index.html
@@ -54,19 +54,14 @@
         <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
         <div class="collapse navbar-collapse navbar-ex1-collapse">
           <ul class="nav navbar-nav side-nav">
-            <li class="active">
+            <li>
               <a href="#/"><i class="fa fa-fw fa-dashboard"></i> Dashboard</a>
             </li>
             <li>
-            <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-arrows-v"></i> Dropdown <i class="fa fa-fw fa-caret-down"></i></a>
-            <ul id="demo" class="collapse">
-              <li>
-                <a href="#">Dropdown Item</a>
-              </li>
-              <li>
-                <a href="#">Dropdown Item</a>
-              </li>
-            </ul>
+              <a href="#/about"><i class="fa fa-fw fa-info-circle"></i> Info</a>
+            </li>
+            <li>
+              <a href="#/"><i class="fa fa-fw fa-clock-o"></i> Reservar</a>
             </li>
           </ul>
         </div>
