--- a/app/app/index.html
+++ b/app/app/index.html
@@ -28,7 +28,7 @@
       <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-          <a class="navbar-brand" href="#/">SB Admin</a>
+          <a class="navbar-brand" href="#/">Reserva LDAC</a>
         </div>
         <!-- Top Menu Items -->
         <ul class="nav navbar-right top-nav">
